# task-list

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
server/: Dockerfile  pyproject.toml
ui/: Dockerfile  package.json
ui/src/: App.vue
ui/src/components/: RecipeList.vue
web_api/: main.py
